--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,13 +1,12 @@
 .header__lang-link {
-  font-family: 'Inter';
   font-weight: 400;
-  font-style: normal;
   color: #FFF;
   font-size: 24px;
   line-height: 1.16;
+  text-decoration: none;
 }
 
-.header__lang-link:last-child {
-  margin-left: 18px;
-  text-decoration: none;
+.header__lang-link:first-child {
+  margin-right: 15px;
+  border-bottom: 1px solid #FFF;
 }
