--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,7 +1,8 @@
 .header {
-  padding: 28px 48px 56px 48px;
-  max-height: 52px;
+  padding-top: 28px;
+  padding-bottom: 56px;
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
+  margin: 0;
 }
