--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,9 +1,9 @@
 .intro__list {
   margin: 0;
   padding: 0;
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 400;
+
+  list-style-type: none;
+  font-weight: 700;
   color: #FFF;
   font-size: 12px;
   line-height: 1.5;
