--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,7 +1,7 @@
 .intro__text {
-  margin: 0;
-  font-family: 'Inter';
-  font-style: normal;
+  margin: 0 0 33px 0;
+  max-width: 690px;
+
   font-weight: 400;
   color: #FFF;
   font-size: 16px;
