--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,7 +1,6 @@
 .intro__title {
-  margin: 0;
-  font-family: 'Inter';
-  font-style: normal;
+  margin: 0 0 40px 0;
+  
   font-weight: 900;
   color: #FFF;
   font-size: 54px;
