--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,10 +1,11 @@
 .lead__caption {
-  margin: 0;
-  font-family: 'Inter';
-  font-style: normal;
+  margin: 8px 0 0 0;
+  align-self: flex-start;
+
   font-weight: 400;
   text-transform: uppercase;
   color: #FFF;
   font-size: 10px;
   line-height: 1.4;
+  letter-spacing: 1.5px;
 }
