--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,7 +1,7 @@
 .lead__title{
-  margin: 0;
-  font-family: 'Inter';
-  font-style: normal;
+  margin: 0 0 32px 0;
+  max-width: 720px;
+  
   font-weight: 900;
   color: #FFF;
   font-size: 96px;
