--- a/pages/index.css
+++ b/pages/index.css
@@ -7,6 +7,10 @@
 /* PAGE */
 @import url(../blocks/page/page.css);
 
+/* CONTAINERS */
+@import url(../blocks/container/container.css);
+@import url(../blocks/container/_size/container_size_xl.css);
+
 /* HEADER */
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css/);
@@ -25,23 +29,45 @@
 @import url(../blocks/intro/__title/intro__title.css);
 @import url(../blocks/intro/__text/intro__text.css);
 @import url(../blocks/intro/__list/intro__list.css);
+@import url(../blocks/intro/__list-number/intro__list-number.css);
 
 /* PHOTO-GRID */
 @import url(../blocks/photo-grid/photo-grid.css);
 @import url(../blocks/photo-grid/__item/photo-grid__item.css);
+@import url(../blocks/photo-grid/__item/_picture/photo-grid__item_picture_train-window.css);
+@import url(../blocks/photo-grid/__item/_picture/photo-grid__item_picture_beach.css);
+@import url(../blocks/photo-grid/__item/_picture/photo-grid__item_picture_beachrock.css);
+@import url(../blocks/photo-grid/__item/_picture/photo-grid__item_picture_car-ice.css);
+@import url(../blocks/photo-grid/__item/_picture/photo-grid__item_picture_dog.css);
+@import url(../blocks/photo-grid/__item/_picture/photo-grid__item_picture_fog.css);
+@import url(../blocks/photo-grid/__item/_picture/photo-grid__item_picture_foothills.css);
+@import url(../blocks/photo-grid/__item/_picture/photo-grid__item_picture_forest.css);
+@import url(../blocks/photo-grid/__item/_picture/photo-grid__item_picture_hills.css);
+@import url(../blocks/photo-grid/__item/_picture/photo-grid__item_picture_mountains.css);
+@import url(../blocks/photo-grid/__item/_picture/photo-grid__item_picture_rocks.css);
+@import url(../blocks/photo-grid/__item/_picture/photo-grid__item_picture_sign.css);
 
 /* PLACES */
 @import url(../blocks/places/places.css);
 
+/* PLACE */
+
 @import url(../blocks/place/place.css);
 @import url(../blocks/place/__title/place__title.css);
-@import url(../blocks/place/__image/place__image.css);
 @import url(../blocks/place/__website/place__website.css);
 @import url(../blocks/place/__url-heading/place__url-heading.css);
 @import url(../blocks/place/__link/place__link.css);
+@import url(../blocks/place/__image/place__image.css);
+@import url(../blocks/place/__image/_picture/place__image_picture_altai.css);
+@import url(../blocks/place/__image/_picture/place__image_picture_baikal.css);
+@import url(../blocks/place/__image/_picture/place__image_picture_karelia.css);
+@import url(../blocks/place/__image/_picture/place__image_picture_kolskii.css);
+@import url(../blocks/place/__image/_picture/place__image_picture_kosa.css);
+@import url(../blocks/place/__paragraphs/place__paragraphs.css);
 @import url(../blocks/place/__paragraph/place__paragraph.css);
 
 /* COVER */
+@import url(../blocks/cover/__link/cover__link.css);
 @import url(../blocks/cover/cover.css);
 @import url(../blocks/cover/__title/cover__title.css);
 @import url(../blocks/cover/__subtitle/cover__subtitle.css);
