--- a/blocks/container/container.css
+++ b/blocks/container/container.css
@@ -5,3 +5,11 @@
   padding-left: 48px;
   padding-right: 48px;
 }
+
+@media (max-width: 768px) {
+  .container {
+    margin-bottom: 88px;
+    padding-left: 24px;
+    padding-right: 24px;
+  }
+}
