--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,35 +1,5 @@
-.cover {
-  background-image: url(../../images/cover-baikal.png);
-  background-size: cover;
-  width: 100%;
-  /* padding: 245px 312px; */
-  padding-top: 245px;
-  padding-bottom: 245px;
-  margin-bottom: 92px;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
-  position: relative;
-  transform: 4s;
-}
-
-.cover::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-
-  background: #2A2C2F;
-  opacity: 0.3;
-
-  transition: opacity 0.4s;
-}
-
-.cover:hover::before {
-  opacity: 0.8;
+@media (max-width: 1024px) {
+  .cover{
+    padding: 0;
+  }
 }
