--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,6 +1,4 @@
 .place__image {
-  background-size: cover;
-  background-repeat: no-repeat;
+  object-fit: cover;
   width: 100%;
-  padding-bottom: 100%;
 }
