--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,6 +1,6 @@
 .place {
   display: grid;
-  grid-template-columns: minmax(min-content, 460px) minmax(min-content, max-content);
+  grid-template-columns: minmax(440px, 460px) minmax(456px, 484px);
   row-gap: 48px;
   column-gap: 40px;
   margin-bottom: 80px;
@@ -8,4 +8,18 @@
 
 .place:last-child {
   margin-bottom: 0;
+}
+
+@media (max-width: 1024px) {
+  .place {
+    column-gap: 32px;
+    grid-template-columns: minmax(340px, 440px) minmax(352px, 456px);
+  }
+}
+
+@media (max-width: 768px) {
+  .place {
+    column-gap: 28px;
+    grid-template-columns: minmax(320px, 340px) minmax(320px, 352px);
+  }
 }
