--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -36,3 +36,17 @@
     padding-bottom: 195px;
   }
 }
+
+@media (max-width: 768px) {
+  .cover__background {
+    padding-top: 115px;
+    padding-bottom: 115px;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 425px) {
+  .cover__background {
+    padding-top: 33px;
+    padding-bottom: 33px;
+  }
+}
