--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -13,3 +13,16 @@
 .footer__link:last-child {
   margin-right: 0;
 }
+
+@media (max-width: 700px) {
+  .footer__link {
+    font-size: 24px;
+    line-height: 1;
+    margin-bottom: 32px;
+    margin-right: 0;
+  }
+
+  .footer__link:last-child {
+    margin-bottom: 0;
+  }
+}
