--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -4,3 +4,9 @@
   justify-content: space-between;
   margin-bottom: 0;
 }
+
+@media (max-width: 700px) {
+  .footer {
+    flex-direction: column;
+  }
+}
