--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -6,3 +6,10 @@
   font-size: 54px;
   line-height: 1.07;
 }
+
+@media (max-width: 720px) {
+  .intro__title {
+    font-size: 32px;
+    line-height: 1.09;
+  }
+}
