--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -15,3 +15,9 @@
     margin-left: 24px;
   }
 }
+
+@media (min-width: 320px) and (max-width: 425px) {
+  .lead__caption {
+    margin-left: 12px;
+  }
+}
