--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -8,3 +8,12 @@
   line-height: 1.04;
   text-align: center;
 }
+
+@media (max-width: 720px) {
+  .lead__title {
+    font-size: 40px;
+    line-height: 1.1;
+    max-width: 288px;
+    margin-bottom: 16px;
+  }
+}
