--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -6,9 +6,22 @@
   font-weight: 400;
   color: #FFF;
   font-size: 18px;
-  line-height: 1.61;
+  line-height: 1.63;
 }
 
 .place__paragraph:last-child {
   margin-bottom: 0px;
+}
+
+@media (max-width: 896px) {
+  .place__paragraph {
+    font-size: 16px;
+    margin-bottom: 25px;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 425px) {
+  .place__paragraph {
+    margin: 0 16px;
+  }
 }
