--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -6,5 +6,20 @@
   font-weight: 900;
   color: #FFF;
   font-size: 72px;
-  line-height: 1.05;
+  line-height: 1.06;
+}
+
+@media (max-width: 896px) {
+  .place__title {
+    font-size: 42px;
+    line-height: 1.1;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 425px) {
+  .place__title {
+    font-size: 32px;
+    line-height: 1.09;
+    margin-left: 16px;
+  }
 }
