--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,3 +1,9 @@
 .place__website {
   align-self: end;
 }
+
+@media (min-width: 320px) and (max-width: 425px) {
+  .place__website {
+    margin-left: 16px;
+  }
+}
