--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -13,6 +13,7 @@
 
 @media (max-width: 530px) {
   .cover__title {
+    margin-bottom: 16px;
     max-width: 288px;
     font-size: 32px;
     line-height: 1.09;
