--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,6 +1,4 @@
 .lead__image {
-  background-image: url(../../../images/lead-image.png);
-  background-size: cover;
+  object-fit: cover;
   width: 100%;
-  padding-bottom: 62.5%;
 }
