--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,8 +1,6 @@
 .place__paragraph {
   margin: 0 0 26px 0;
 
-  font-family: 'Inter';
-  font-style: normal;
   font-weight: 400;
   color: #FFF;
   font-size: 18px;
@@ -22,6 +20,6 @@
 
 @media (min-width: 320px) and (max-width: 425px) {
   .place__paragraph {
-    margin: 0 16px;
+    margin: 0 16px 25px 16px;
   }
 }
