--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -17,9 +17,14 @@
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 820px) {
   .place {
     column-gap: 28px;
+  }
+}
+
+@media (max-width: 768px) {
+  .place {
     grid-template-columns: minmax(320px, 340px) minmax(320px, 352px);
   }
 }
