--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,3 +1,10 @@
+@media (max-width: 820px) {
+  .places {
+    padding-left: 24px;
+    padding-right: 24px;
+  }
+
+}
 @media (min-width: 320px) and (max-width: 425px) {
   .places {
     padding: 0;
