--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -23,7 +23,7 @@
   background: #2A2C2F;
   opacity: 0.3;
 
-  transition: opacity 0.4s;
+  transition: opacity .4s ease-in;
 }
 
 .cover__background:hover::before {
