--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -6,10 +6,16 @@
   font-size: 16px;
   line-height: 1.125;
   text-decoration: none;
+
+  transition: opacity .4s ease-in;
 }
 
 .footer__link:last-child {
   margin-right: 0;
+}
+
+.footer__link:hover {
+  opacity: 0.8;
 }
 
 @media (max-width: 700px) {
