--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -4,6 +4,12 @@
   font-size: 24px;
   line-height: 1.16;
   text-decoration: none;
+
+  transition: opacity .4s ease-in;
+}
+
+.header__lang-link:hover {
+  opacity: 0.8;
 }
 
 @media (min-width: 320px) and (max-width: 425px) {
