--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -7,7 +7,7 @@
   font-size: 18px;
   line-height: 1.22;
 
-  transition: opacity 0.4s ease-in;
+  transition: opacity .4s ease-in;
 }
 
 .place__link:hover {
